--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
           IP=$(terraform output -raw ec2_public_ip)
           echo "EC2_IP=$IP" >> $GITHUB_ENV
 
+      - name: Aguardar instância ficar pronta (60 segundos)
+        run: sleep 60
+
       - name: Parar e limpar Docker (se já existir)
         uses: appleboy/ssh-action@v1.0.3
         with:
