--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,30 +1,64 @@
-name: Deploy de Aplicação na AWS
+name: Deploy na AWS (Infra + App)
 
 on:
   push:
-    paths:
-      - 'app/**'
     branches:
       - main
+    paths:
+      - 'app/**'
+      - 'terraform/**'
+      - '.github/workflows/deploy.yml'
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  provision_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Obter IP Público da EC2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Verificar se há infra provisionada
+        id: check_infra
         working-directory: terraform
         run: |
-          terraform init
+          terraform state list || echo "vazio" > infra_vazia.txt
+          if [ -f infra_vazia.txt ]; then
+            echo "infra=nao_provisionada" >> $GITHUB_OUTPUT
+          else
+            echo "infra=provisionada" >> $GITHUB_OUTPUT
+          fi
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Terraform Apply se necessário
+        if: steps.check_infra.outputs.infra == 'nao_provisionada'
+        working-directory: terraform
+        run: terraform apply -auto-approve
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Obter IP da instância EC2
+        working-directory: terraform
+        run: |
           IP=$(terraform output -raw ec2_public_ip)
           echo "EC2_IP=$IP" >> $GITHUB_ENV
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Aguardar instância ficar pronta (60 segundos)
+      - name: Aguardar EC2 subir em 60 segundos
         run: sleep 60
 
       - name: Gerar hash do código
@@ -33,7 +67,7 @@ jobs:
           CODE_HASH=$(tar -cf - ./app | sha256sum | cut -d' ' -f1)
           echo "code_hash=$CODE_HASH" >> $GITHUB_OUTPUT
 
-      - name: Verificar se há mudanças no código e implantar
+      - name: Verificar hash e limpar container (se necessário)
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ env.EC2_IP }}
@@ -43,17 +77,17 @@ jobs:
             cd /home/ubuntu/app || mkdir /home/ubuntu/app && cd /home/ubuntu/app
             echo "${{ steps.hash.outputs.code_hash }}" > .new_hash
             if [ ! -f .last_hash ] || [ "$(cat .new_hash)" != "$(cat .last_hash)" ]; then
-              echo "Código alterado. Atualizando aplicação..."
+              echo "Código alterado. Atualizando..."
               sudo docker stop login-container || true
               sudo docker rm login-container || true
               sudo docker rmi login-app || true
               rm -rf /home/ubuntu/app/*
             else
-              echo "Nenhuma alteração no código. Encerrando deploy."
+              echo "Código inalterado. Ignorando deploy."
               exit 0
             fi
 
-      - name: Copiar código via SCP
+      - name: Copiar aplicação via SCP - Secure Copy Protocol
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ env.EC2_IP }}
@@ -62,7 +96,7 @@ jobs:
           source: "./app"
           target: "/home/ubuntu/app"
 
-      - name: Executar aplicação Docker
+      - name: Subir aplicação via Docker
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ env.EC2_IP }}
