--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -32,11 +32,16 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Obter IP Público da instância EC2
+      - name: Obter IP Público da instância EC2 (condicional)
         working-directory: terraform
         run: |
-          IP=$(terraform output -raw ec2_public_ip)
-          echo "EC2_IP=$IP" >> $GITHUB_ENV
+          terraform show -json > tfstate.json
+          IP=$(jq -r '.values.outputs.ec2_public_ip.value // empty' tfstate.json)
+          if [ -z "$IP" ]; then
+            echo "Erro: IP público não encontrado no estado atual do Terraform"
+            exit 1
+          fi
+          echo "EC2_IP=$IP" >> $GITHUB_ENV        
 
       - name: Aguardar instância ficar pronta (60 segundos)
         run: sleep 60
