--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -32,16 +32,23 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Obter IP Público da instância EC2 (condicional)
+      - name: Obter IP Público da instância EC2 (com fallback)
         working-directory: terraform
         run: |
-          terraform show -json > tfstate.json
-          IP=$(jq -r '.values.outputs.ec2_public_ip.value // empty' tfstate.json)
+          terraform init -input=false
+          if [ -f terraform.tfstate ]; then
+            terraform output -raw ec2_public_ip > ip.txt || echo "" > ip.txt
+          else
+            echo "" > ip.txt
+          fi
+  
+          IP=$(cat ip.txt)
+  
           if [ -z "$IP" ]; then
-            echo "Erro: IP público não encontrado no estado atual do Terraform"
+            echo "⚠️ IP público não encontrado. Verifique se o Terraform já foi aplicado."
             exit 1
           fi
-          echo "EC2_IP=$IP" >> $GITHUB_ENV        
+          echo "EC2_IP=$IP" >> $GITHUB_ENV         
 
       - name: Aguardar instância ficar pronta (60 segundos)
         run: sleep 60
