--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -33,22 +33,27 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Obter IP Público da instância EC2 (com fallback)
+        id: obter_ip
         working-directory: terraform
         run: |
           terraform init -input=false
-          if [ -f terraform.tfstate ]; then
-            terraform output -raw ec2_public_ip > ip.txt || echo "" > ip.txt
+          
+          if terraform output -raw ec2_public_ip > ip.txt 2>/dev/null; then
+            echo "✅ IP encontrado via terraform output"
           else
+            echo "⚠️ IP não encontrado via terraform output"
             echo "" > ip.txt
           fi
-  
+
           IP=$(cat ip.txt)
-  
+
           if [ -z "$IP" ]; then
-            echo "⚠️ IP público não encontrado. Verifique se o Terraform já foi aplicado."
+            echo "❌ IP público não encontrado. Provavelmente a infraestrutura ainda não foi criada."
+            echo "Para resolver, faça um commit que altere algo em terraform/ para forçar a criação."
             exit 1
           fi
-          echo "EC2_IP=$IP" >> $GITHUB_ENV         
+
+          echo "EC2_IP=$IP" >> $GITHUB_ENV
 
       - name: Aguardar instância ficar pronta (60 segundos)
         run: sleep 60
